# avpack

./: .editorconfig  .gitignore  .prettierrc.json  CODEOWNERS  COPYRIGHT.txt  mise.toml  pyproject.toml  readme.md  ruff.toml
.github/: renovate.json
scripts/: generate-schemas.py
src/avpack/: __init__.py  app.py  commands.py  encode_profile.py  encode_progress.py  types.py
src/avpack/internals/: __init__.py  data.py  ffmpeg.py  ffprobe.py  outputs.py  tools.py
src/avpack/outputs/: profile.py  types.py
src/avpack/widgets/: __init__.py  encoding_queue.py  file_picker.py  media_item.py  sequence_label.py
src/ffpack/: add_media_screen.py  app.py  commands.py  encode_profile.py  encode_progress.py  errors.py  ffpack.tcss  types.py  version.py
src/ffpack/internals/: encode_profile.py  ffmpeg.py  ffprobe.py  probe.py  tools.py
src/ffpack/widgets/: center_middle.py  encoding_queue.py  media_item.py
