[project]
name = "avpack"
version = "0.2.0"
description = "Video/audio file packager for HLS and DASH streams"
readme = "README.md"
requires-python = "==3.13.7"
authors = [{ name = "Noel Forte", email = "noel@forte.is" }]
dependencies = [
  "pydantic==2.11.7",
  "pyvips[binary]==3.0.0",
  "pyyaml==6.0.2",
  "textual-fspicker==0.5.0",
  "textual==5.3.0",
]

[project.scripts]
avpack = "avpack.app:run"

[dependency-groups]
dev = [
  "ruff==0.12.10",
  "textual-dev==1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
