[project]
name = "avpack"
version = "0.2.0"
description = "Video/audio file packager for HLS and DASH streams"
readme = "README.md"
requires-python = "==3.14.3"
authors = [{ name = "Noel Forte", email = "noel@forte.is" }]
dependencies = [
  "pydantic==2.12.5",
  "pyvips[binary]==3.1.1",
  "pyyaml==6.0.3",
  "textual-fspicker==0.6.0",
  "textual==7.5.0",
]

[project.scripts]
avpack = "avpack.app:run"

[dependency-groups]
dev = [
  "ruff==0.15.0",
  "textual-dev==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
